# slurm-scheduler-plugin

./: README.md
docker-environment/: Dockerfile  docker-compose.yml  slurm.conf
plugins/sched/thesis/: Makefile.am  thesis.c  thesis.h  thesis_wrapper.c
